src/tui/tests/snapshots/keyring_cli__tui__tests__screen_snapshot_tests__passkey_confirm_initial_state.snap
---
source: src/tui/tests/screen_snapshot_tests.rs
expression: screen
---
PasskeyConfirmScreen {
    passkey_words: [
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
        "word",
    ],
    confirmed: false,
}
