src/tui/tests/snapshots/keyring_cli__tui__tests__screen_snapshot_tests__passkey_confirm_render_confirmed.snap
---
source: src/tui/tests/screen_snapshot_tests.rs
expression: output
---

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                                确 认  Passkey                                │
 └────────────────────────────────────────────────────────────────────────────┘


                          ⚠️  请 确 认 您 已 妥 善 保 存  Passkey

 ┌ Passkey 摘 要  ──────────────────────────────────────────────────────────────┐
 │Passkey 摘 要  (共  24 词 ):                                                    │
 │                                                                            │
 │前  4 词 :                                                                    │
 │abandon ability able about                                                  │
 │                                                                            │
 │后  4 词 :                                                                    │
 │action actor actress actual                                                 │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                          ✓ 我 已 安 全 保 存 此  Passkey                          │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                  Enter: 下 一 步     Space: 确 认     Esc: 返 回                  │
 └────────────────────────────────────────────────────────────────────────────┘
