src/tui/tests/snapshots/keyring_cli__tui__tests__screen_snapshot_tests__passkey_confirm_render_initial.snap
---
source: src/tui/tests/screen_snapshot_tests.rs
expression: output
---

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                               Confirm Passkey                              │
 └────────────────────────────────────────────────────────────────────────────┘


               ⚠️  Please confirm you have safely saved the Passkey

 ┌ Passkey Summary ───────────────────────────────────────────────────────────┐
 │Passkey Summary (24 words):                                                 │
 │                                                                            │
 │First 4 words:                                                              │
 │abandon ability able about                                                  │
 │                                                                            │
 │Last 4 words:                                                               │
 │action actor actress actual                                                 │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                     ☐ I have safely saved this Passkey                     │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │             Enter: Confirm first    Space: Confirm    Esc: Back            │
 └────────────────────────────────────────────────────────────────────────────┘
