src/tui/tests/snapshots/keyring_cli__tui__tests__screen_snapshot_tests__passkey_confirm_toggle_sequence.snap
---
source: src/tui/tests/screen_snapshot_tests.rs
expression: seq.to_string()
---
Sequence: confirm_toggle_flow

Step 1: initial
──────────────

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                                确 认  Passkey                                │
 └────────────────────────────────────────────────────────────────────────────┘


                          ⚠️  请 确 认 您 已 妥 善 保 存  Passkey

 ┌ Passkey 摘 要  ──────────────────────────────────────────────────────────────┐
 │Passkey 摘 要  (共  24 词 ):                                                    │
 │                                                                            │
 │前  4 词 :                                                                    │
 │word word word word                                                         │
 │                                                                            │
 │后  4 词 :                                                                    │
 │word word word word                                                         │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                          ☐ 我 已 安 全 保 存 此  Passkey                          │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                 Enter: 需 先 确 认     Space: 确 认     Esc: 返 回                 │
 └────────────────────────────────────────────────────────────────────────────┘


Step 2: confirmed
────────────────

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                                确 认  Passkey                                │
 └────────────────────────────────────────────────────────────────────────────┘


                          ⚠️  请 确 认 您 已 妥 善 保 存  Passkey

 ┌ Passkey 摘 要  ──────────────────────────────────────────────────────────────┐
 │Passkey 摘 要  (共  24 词 ):                                                    │
 │                                                                            │
 │前  4 词 :                                                                    │
 │word word word word                                                         │
 │                                                                            │
 │后  4 词 :                                                                    │
 │word word word word                                                         │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                          ✓ 我 已 安 全 保 存 此  Passkey                          │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                  Enter: 下 一 步     Space: 确 认     Esc: 返 回                  │
 └────────────────────────────────────────────────────────────────────────────┘
