src/tui/tests/snapshots/keyring_cli__tui__tests__screen_snapshot_tests__passkey_generate_render_confirmed.snap
---
source: src/tui/tests/screen_snapshot_tests.rs
expression: output
---

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                              生 成 新 的  Passkey                              │
 └────────────────────────────────────────────────────────────────────────────┘


                ⚠️  请 务 必 保 存 以 下  24 词 ， 这 是 恢 复 数 据 的 唯 一 方 式 ！


 ┌ Passkey ───────────────────────────────────────────────────────────────────┐
 │  1. word           2. word           3. word           4. word             │
 │  5. word           6. word           7. word           8. word             │
 │  9. word          10. word          11. word          12. word             │
 │ 13. word          14. word          15. word          16. word             │
 │ 17. word          18. word          19. word          20. word             │
 │ 21. word          22. word          23. word          24. word             │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                             ✓ 我 已 保 存  Passkey                             │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                  Enter: 下 一 步     Space: 确 认     Esc: 返 回                  │
 └────────────────────────────────────────────────────────────────────────────┘
