src/tui/tests/snapshots/keyring_cli__tui__tests__screen_snapshot_tests__passkey_generate_with_12_words.snap
---
source: src/tui/tests/screen_snapshot_tests.rs
expression: screen
---
PasskeyGenerateScreen {
    word_count: 12,
    words: None,
    confirmed: false,
    copied: false,
    error: None,
}
