src/tui/tests/snapshots/keyring_cli__tui__tests__screen_snapshot_tests__passkey_generate_with_12_words_render.snap
---
source: src/tui/tests/screen_snapshot_tests.rs
expression: output
---

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                            Generate New Passkey                            │
 └────────────────────────────────────────────────────────────────────────────┘


    ⚠️  Please save these 12 words, this is the ONLY way to recover your data!


 ┌────────────────────────────────────────────────────────────────────────────┐
 │                            Generating Passkey...                           │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                         ☐ I have saved the Passkey                         │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │             Enter: Confirm first    Space: Confirm    Esc: Back            │
 └────────────────────────────────────────────────────────────────────────────┘
